fixing mobile jumping

--- a/brandedapp.css
+++ b/brandedapp.css
@@ -14,7 +14,7 @@ html,body{
 }
 .slogan{
 	position:absolute;
-	top:20;
+	top:20vh;
 	height:30%;
 	width:50%;
 }
